refactor SystemDriver into a readable codebase